styles.css
body {
  margin: 0;
  padding: 0;
  font-family: Tahoma, Arial, sans-serif;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

a, a:hover, a:focus, a:active {
  text-decoration: none;
  color: inherit;
}

.inner-wrapper {
  max-width: 1600px;
  margin-top: 80px;
  width: 100%;
  background-color: black;
}

li:hover {
  cursor: pointer;
}

.nav {
  max-width: 1600px;
  left: auto;
  right: auto;
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: black;
  height: 80px;
  border-bottom: solid 1px white;
}

.burger-icon {
  margin-left: 2rem;
}

.title {
  color: #E7FF70;
  font-size: 28px;
  font-style: italic;
  font-weight: bolder;
  margin-left: 3rem;
  margin-right: 1.5rem;
}

.title:hover {
  cursor: pointer;
}

.menu {
  list-style: none;
  color: #E7FF70;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.menu li {
  font-weight: bold;
  margin-right: 1rem;
}

rect {
  fill: white;
}

.twitter {
  height: 22px;
  background-color: #E7FF70;
}

.insta {
  height: 22px;
  margin-left: 2rem;
  background-color: #E7FF70;
}

.author-container .twitter {
  background-color: white;
}

.social {
  margin-left: auto;
  padding-right: 2rem;
  display: flex;
  flex-direction: row;
}

.category {
  text-decoration: underline;
}

/* mobile */

.mobile-nav {
  display: none;
}

/* feature */
.feature-container {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 2fr;
  background-color: black;
  height: 400px;
}

.feature-image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.feature-text {
  color: white;
  margin: 2rem;
  padding-right: 3rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.feature-text:hover {
  cursor: pointer;
}

.feature-text h1 {
  font-size: 30px;
  line-height: 1.3;
}

.feature-text h1:hover {
  color: grey;
}

.feature-text p {
  font-size: 16px;
}

.feature-text .author {
  font-size: 20px;
}

/* grid */
.grid-container {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  background-color: white;
}

.square {
  display: flex;
  flex-direction: column;
  border: solid 1px lightgrey;
}

.square:hover {
  cursor: pointer;
}

.square-image img {
  width: 100%;
  height: 240px;
  object-fit: cover;
}

.square-text {
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.square-text h3:hover {
  color: grey;
}

.square p {
  font-size: 14px;
  margin: 4px 0;
}

.square .author {
  font-size: 14px;
}

.square h3 {
  margin: 8px 0;
}

/* heading */
.heading {
  padding: 1rem;
  height: 70px;
  display: flex;
  align-items: center;
  background-color: white;
}

.heading h2 {
  color: black;
  font-weight: bolder;
  font-size: 24px;
}

/* BANNER */
.banner {
  background-color: black;
  color: #E7FF70;
  font-weight: bolder;
  padding: 4rem;
}

.banner h3 {
  font-size: 30px;
}

button {
  border: none;
  border-radius: 0px;
  font-family: Helvetica;
  font-weight: bolder;
  font-size: 18px;
  padding: 15px;
}

/* ad */
.ad {
  background-color: black;
  color: #E7FF70;
  font-weight: bolder;
  padding: 2rem;
}

.ad h3 {
  font-size: 20px;
}

/* footer */
footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  background-color: black;
  padding: 50px 25px;
}

footer ul {
  list-style-type: none;
  color: white;
  display: flex;
  justify-content: center;
  width: 100%;
  margin: 0;
  padding: 0;
}

footer li {
  font-size: 12px;
  text-decoration: underline;
  margin-right: 15px;
  margin-top: 15px;
}

.copyright {
  color: white;
  margin-top: 2rem;
  font-style: italic;
}

/* MOBILE MENU */
@media only screen and (max-width: 800px) {
  .nav {
    display: none;
  }

  .inner-wrapper {
    margin-top: 50px;
  }

  .mobile-nav {
    left: auto;
    right: auto;
    position: fixed;
    top: 0;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: black;
    height: 50px;
  }

  .mobile-nav .title {
    font-size: 20px;
  }

  .mobile-nav .social {
    margin-left: 0;
    padding-right: 1rem;
  }

  .mobile-nav .twitter {
    height: 20px;
  }

  .author-container .twitter {
    height: 18px;
  }

  .mobile-nav .burger-icon {
    margin-left: 1rem;
  }

  .feature-text h1 {
    font-size: 25px;
  }
}

/* MOBILE BODY */
@media only screen and (max-width: 600px) {
  /* feature */
  .feature-container {
    height: 220px;
  }

  .feature-text {
    color: white;
    margin: 1rem;
  }

  .feature-text h1 {
    font-size: 18px;
  }

  .feature-text p {
    font-size: 10px;
  }

  .feature-text .author {
    font-size: 16px;
  }

  /* grid */
  .grid-container {
    grid-template-columns: 1fr;
  }

  .square {
    flex-direction: row-reverse;
    justify-content: space-between;
    height: 150px;
  }

  .square-text {
    padding: 1rem;
  }

  .square h3 {
    font-size: 15px;
  }

  .square p {
    font-size: 10px;
  }

  .square-image img {
    height: 100%;
    width: 30vw;
  }

  /* banner */
  .banner {
    padding: 3rem;
  }
  
  .banner h3 {
    font-size: 25px;
  }

  /* heading */
  .heading {
    height: 40px;
  }

  .heading h2 {
    font-size: 18px;
  }

  /* footer */
  footer ul {
    flex-direction: column;
  }

  footer {
    align-items: flex-start;
  }
}


/* article */

.article-container {
  display: flex;
  flex-direction: column;
  background: white;
}

.article-image img {
  width: 100%;
  object-fit: cover;
  max-height: 500px;
}

.article-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.article-title {
  width: 55vw;
}

.article-title h1 {
  font-size: 40px;
  line-height: 1.3;
  letter-spacing: .1rem;
}

.article-body {
  width: 55vw;
}

.article-text .author {
  font-size: 20px;
}

.article-body p {
  font-size: 18px;
  line-height: 1.8;
  letter-spacing: .1rem;
  font-family: Georgia, serif;
  font-weight: lighter;
}


@media only screen and (max-width: 600px) {

  .article-image img {
    max-height: 300px;
  }

  .article-title {
    width: 80vw;
  }

  .article-title h1 {
    font-size: 26px;
  }

  .article-text .author {
    font-size: 18px;
  }

  .date {
    font-size: 11px;
  }

  .article-body p {
    font-size: 13px;
    line-height: 1.5;
    letter-spacing: .1rem;
  }

  .article-body {
    width: 80vw;
  }
}

